--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>IWA2</title>
 
-    <script src="challenge3.js"></script>
+    <script src="challenge1.js" defer></script>
+    <script src="challenge2.js" defer></script>
+    <script src="challenge3.js" defer></script>
 </head>
 <body>
 
